- Added setting to add a stroke on icons

Improved ZX80 and ZX81 emulation:
- All timing and video code has been rewritten and fixed, near 100% perfect
- Removed configuration settings: --vsync-minimum-length, --no-horiz-stabilization, --enablezx8081lnctradjust, --disablezx8081lnctradjust
- Removed menu settings: Horizontal Stabilization, lnctr video adjust, Video x_offset

Improved editing joystick to events/keys (allow to unasign easily)
Improved ZX Life: allow to speed up game, fix behaviour on board limits
Improved Trash icon
Improved decimal precision of Basic Variables window values
Improve code to allow compilation on other Unix systems, like AROS, FiwixOS, Sortix
Improved debug cpu:
- Show when registers values are modified by last opcode execution
- Views 5 and 6 use a different memptr ("memptx")
- Show when memory is modified by last opcode execution on views 5 and 6
- Direct key (t) to evaluate expressions
- Added user variables VAR0, VAR1, ... VAR9
- Added video frames counter

Fixed emulation of Magnum Light Phaser
Fixed reading port BFFD on Spectrum +2A/+3
Fixed loading tape with --tape and --realtape and autoload snapshot on start
Fixed uncompress tar and rar files with spaces in name
Fixed default timer on Mac OS X when not using cocoa driver
Fixed non-pthreads compilation
Fixed possible divide by 0 when getting bad cpu usage on Linux

----



ZEsarUX 12.1 - Night Shift edition. 25 September 2025

* New things added:

Added Streaming mode to ZENG Online for ZX Spectrum. It improves gaming experience: reduces lag and drops all game state inconsistencies between all players
Added support for steering wheel joystick (and other analog joystick controls) to racing games (using pre-defined modification for specific games or custom)
Added real joystick support for SDL2
Added support for up to 4 joystick fire buttons on:
- Kempston joystick (Spectrum): 4 buttons
- Amstrad CPC: 3 buttons
- Master System, SG1000, Colecovision: 2 buttons