@@ -107,13 +107,14 @@ quiza es que al grabar, la señal de vsync "artificial" (generada de sacar los 0
 -ZX81: mazogs, 3dmonster maze, y los de hires: pseudo (manic, pacman), udg, wrx, chr$
 -starfigh.81 creo que es muy sensible a timings, si la nmi tarda mas, va muy lento
 
-
 -revisar waitmap y activarlo en pausa nmi. o dejar el 9 tal cual. si no se usa, desactivar funciones de uso de waitmap (no estoy
 seguro de que alguna vez se salga de rango y genere segfault)
-
 
 -ARX hires extension? https://k1.spdns.de/Vintage/Sinclair/80/Doityourself/ARX%20hires%20extension/
 
 -Opción para "apagar" la TV. útil?
 
--ZX81 con disable border no se ve bien
+
+
+-vsync_per_second. implementar. que hacia antes?
+
